<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KOOK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="developed_by">Developed by KOOK TEAM</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="sign_in">Sign in </string>
    <string name="username_validation_msg">Please enter valid username</string>
    <string name="password_validation_msg">Please enter valid password.</string>
    <string name="cache_cleaner">Optimizer</string>
    <string name="message_backup">Message Backup</string>
    <string name="contact_backup">Contact Backup</string>
    <string name="app_locker">App Locker</string>
    <string name="contact_message_history">Contact History</string>
    <string name="message_history">Message History</string>
    <string name="uninstall_apps">Uninstall APPs</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>

    <!-- Apps list header -->
    <string name="apps_list_header_title">Device memory</string>
    <string name="apps_list_header_used_prefix">Used</string>
    <string name="apps_list_header_cache_prefix">Cache</string>
    <string name="apps_list_header_free_prefix">Free</string>
    <string name="apps_list_header_footer">App cache usage</string>
    <string name="apps_list_header_memory"><xliff:g id="memory">%1$s</xliff:g></string>

    <!-- Empty list view -->
    <string name="empty_cache">Device already Optimized</string>
    <string name="no_such_app">No such application.</string>

    <!-- Progress bar -->
    <string name="scanning">Scanning…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>

    <!-- Progress dialog -->
    <string name="cleaning_cache">Optimization device</string>
    <string name="cleaning_in_progress">Optimization is in progress…</string>

    <!-- Toasts -->
    <string name="cleaned">Device optimized</string>
    <string name="toast_could_not_clean">Could not optimize device</string>
    <string name="toast_could_not_clean_reason">Could not optimize device: %1$s</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="main_preferences">Main preferences</string>
    <string name="about">About</string>

    <!-- Clean on app startup preference -->
    <string name="clean_on_app_startup">Optimize device on app startup</string>
    <string name="clean_on_app_startup_summary">Automatically optimize device on application startup</string>
    <string name="clean_on_app_startup_key" translatable="false">clean_on_app_startup</string>

    <!-- Exit after clean up -->
    <string name="exit_after_clean">Exit after optimized</string>
    <string name="exit_after_clean_summary">Exit after optimization is completed</string>
    <string name="exit_after_clean_key" translatable="false">exit_after_optimize</string>

    <!-- Clean on system startup preference -->
    <string name="clean_on_system_startup">Clean on system startup</string>
    <string name="clean_on_system_startup_summary">Automatically optimize on system startup</string>
    <string name="clean_on_system_startup_key" translatable="false">optimize_on_device_startup</string>

    <!-- Rationales -->
    <string name="rationale_title">Insufficient permissions</string>
    <string name="rationale_storage">Storage permission is needed to optimize device</string>
    <string name="dashboard">Dashboard</string>
    <string name="call_history">Call History</string>
    <string name="sms_history">Message History</string>
    <string name="number">Number :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="duration">Duration :</string>
    <string name="err_msg_are_sure">Are you sure ?</string>
    <string name="call_back">CallBack</string>
    <string name="delete">Delete</string>
    <string name="feedback">Feedback</string>

    <string name="oops_no_call_history">Oops,you does not have call history</string>
    <string name="oops_no_msg_history">Oops,you does not have message history</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait</string>
    <string name="error">Alert</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">Please check your internet connection.</string>
    <string name="cancel">Cancel</string>


</resources>
