<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/md_white_1000"
    app:cardCornerRadius="@dimen/margin_2dp"
    app:cardElevation="@dimen/margin_5dp"
    tools:ignore="MissingPrefix">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/call" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_number"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/number"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/text_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:maxLines="1"
                android:text="@string/date"
                android:textColor="@color/light_gray_80"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:id="@+id/txt_time"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:maxLines="1"
                android:padding="@dimen/margin_2dp"
                android:text="@string/time"
                android:textColor="@color/light_gray_80"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:id="@+id/txt_duration"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:maxLines="1"
                android:text="@string/duration"
                android:textColor="@color/light_gray_80"
                android:textSize="@dimen/text_16sp"/>

        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>