<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_cache_cleaner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_cache_clean" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_cleaner" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cv_view_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_app_locker" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_locker" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_contact_msg_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_diary" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/contact_message_history" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cv_uninstall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_unistall" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uninstall_apps" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_add_launch_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_contact_backup" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/contact_backup" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cv_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_120dp"
                        android:padding="@dimen/margin_10dp"
                        android:src="@drawable/ic_msg_backup" />

                    <TextView
                        style="@style/DashBoard_Text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/message_backup" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>